[package]
name = "lol"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[[bin]]
name = "lol"
path = "src/bin.rs"

[lib]
name = "lol"
path = "src/lib.rs"

[dependencies]
ess = "0.4.2"
#lovm2 = "0.4.8"
#lovm2 = { git = "https://github.com/lausek/lovm2", branch = "v0.4.8" }
lovm2 = { path = "/home/lausek/Projects/lovm2" }
structopt = "0.3.21"
